Fix advanced mode output height jump.

--- a/core/src/main/web/app/styles/cells.scss
+++ b/core/src/main/web/app/styles/cells.scss
@@ -137,7 +137,7 @@ bk-section-cell {
     min-height: 20px;
 
     .advanced-mode & {
-      min-height: 17px;
+      min-height: 18px;
       padding: 8px $grid-gutter-width;
     }
 
